--- a/module2-solution/styles.css
+++ b/module2-solution/styles.css
@@ -1,30 +1,17 @@
 /********** Base styles **********/
 * {
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 body {
   font-family: Helvetica, Arial, sans-serif;
-
 }
 h1 {
   text-align: center;
   margin-bottom: 15px;
   font-size: 175%;
-
 }
-
-/*p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
-  }*/
 
 p {
   margin-left: 10px;
@@ -33,7 +20,7 @@ p {
   margin-bottom: 5px;
 }
 
-.block {
+.box {
   width: 120px;
   height: 30px;
   border: 1px solid black;
@@ -50,16 +37,16 @@ p {
   font-weight: bold;
 }
 
-#p1 {
+#pChicken {
   background-color: #FFFC60;
 }
 
-#p2 {
+#pBeef {
   background-color: #D90202;
   color: white;
 }
 
-#p3 {
+#pSushi {
   background-color: #FFA260;
 }
 
@@ -70,20 +57,20 @@ p {
 .row > div {
   border: 2px solid black;
   background-color: #C1C2C1;
-  /*margin-right: auto;
-  margin-left: auto;*/
   margin-bottom: 15px;
-  /*margin-left: 5px;
-  margin-right: 5px;*/
+  margin-left: 0.75%;
+  margin-right: 0.75%;
   position: relative;
 }
 
+.section {
+  width: 100%;
+}
 
 /********** Desktop devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 10px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -95,7 +82,7 @@ p {
     width: 25%;
   }
   .col-lg-4 {
-    width: 33.33%;
+    width: 31.833%;
   }
   .col-lg-5 {
     width: 41.66%;
@@ -127,7 +114,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 4px solid green;
   }
   .col-md-1 {
     width: 8.33%;
@@ -145,7 +131,7 @@ p {
     width: 41.66%;
   }
   .col-md-6 {
-    width: 50%;
+    width: 48.50%; 
   }
   .col-md-7 {
     width: 58.33%;
@@ -163,12 +149,13 @@ p {
     width: 91.66%;
   }
   .col-md-12 {
-    width: 100%;
+    width: 98.5%;
   }
 }
 
 
 /********** Mobile devices only **********/
+/*
 @media (max-width: 767px) {
   .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
     float: left;
@@ -211,3 +198,4 @@ p {
     width: 100%;
   }
 }
+*/
